Refactoring payments module

--- a/addons/playgama_bridge/template/playgama-bridge-config.json
+++ b/addons/playgama_bridge/template/playgama-bridge-config.json
@@ -20,5 +20,29 @@
             "interstitialPlacements": [],
             "rewardedPlacements": []
         }
-    }
+    },
+    "payments": [
+        {
+            "commonId": "test_product",
+            "yandex": {
+                "id": "test_product"
+            },
+            "facebook": {
+                "productID": "test_product"
+            },
+            "msn": {
+                "productId": "test_product"
+            },
+            "playgama": {
+                "amount": 1
+            },
+            "qa_tool": {
+                "amount": 1
+            },
+            "playdeck": {
+                "amount": 1,
+                "description": "TEST PRODUCT"
+            }
+        }
+    ]
 }
