--- a/addons/playgama_bridge/template/playgama-bridge-config.json
+++ b/addons/playgama_bridge/template/playgama-bridge-config.json
@@ -37,6 +37,7 @@
                 "amount": 1
             },
             "qa_tool": {
+                "id": "test_product",
                 "amount": 1
             },
             "playdeck": {
