Refactoring advertisement module

--- a/addons/playgama_bridge/template/playgama-bridge-config.json
+++ b/addons/playgama_bridge/template/playgama-bridge-config.json
@@ -14,11 +14,14 @@
         "lagged": {
             "devId": "",
             "publisherId": ""
+        }
+    },
+    "advertisement": {
+        "interstitial": {
+            "preloadOnStart": true
         },
-        "facebook": {
-            "bannerPlacementId": "",
-            "interstitialPlacements": [],
-            "rewardedPlacements": []
+        "rewarded": {
+            "preloadOnStart": true
         }
     },
     "payments": [
