--- a/addons/playgama_bridge/template/playgama-bridge-config.json
+++ b/addons/playgama_bridge/template/playgama-bridge-config.json
@@ -17,6 +17,13 @@
         },
         "msn": {
             "gameId": ""
+        },
+        "discord" : {
+            "appId": ""
+        },
+        "gamepush": {
+            "projectId": "",
+            "publicToken": ""
         }
     },
     "advertisement": {
