--- a/addons/playgama_bridge/template/playgama-bridge-config.json
+++ b/addons/playgama_bridge/template/playgama-bridge-config.json
@@ -18,12 +18,26 @@
         "msn": {
             "gameId": ""
         },
-        "discord" : {
+        "discord": {
             "appId": ""
         },
         "gamepush": {
             "projectId": "",
             "publicToken": ""
+        },
+        "jio_games": {
+            "packageName": ""
+        },
+        "crazy_games": {
+            "xsollaProjectId": "",
+            "isSandbox": false,
+            "useUserToken": false
+        },
+        "facebook": {
+            "subscribeForNotificationsOnStart": true
+        },
+        "yandex": {
+            "useSignedData": false
         }
     },
     "advertisement": {
