--- a/addons/playgama_bridge/template/playgama-bridge-config.json
+++ b/addons/playgama_bridge/template/playgama-bridge-config.json
@@ -15,6 +15,9 @@
             "devId": "",
             "publisherId": ""
         },
+        "huawei": {
+            "appId": ""
+        },
         "msn": {
             "gameId": ""
         },
@@ -34,10 +37,15 @@
             "useUserToken": false
         },
         "facebook": {
-            "subscribeForNotificationsOnStart": true
+            "subscribeForNotificationsOnStart": true,
+            "sendAnalyticsEvents": false
         },
         "yandex": {
-            "useSignedData": false
+            "useSignedData": false,
+            "sendAnalyticsEvents": false
+        },
+        "youtube": {
+            "sendAnalyticsEvents": false
         }
     },
     "advertisement": {
@@ -51,5 +59,6 @@
         "backfillId": ""
     },
     "payments": [],
-    "leaderboards": []
+    "leaderboards": [],
+    "sendAnalyticsEvents": true
 }
