Update version & JS Core

--- a/addons/playgama_bridge/template/playgama-bridge-config.json
+++ b/addons/playgama_bridge/template/playgama-bridge-config.json
@@ -1,5 +1,9 @@
 {
-    "$schema": "https://bridge.playgama.com/v1.26.1/schema.json",
+    "$schema": "https://bridge.playgama.com/v1.27.0/schema.json",
+    "device": {
+        "useBuiltInOrientationPopup": true,
+        "supportedOrientations": ["landscape", "portrait"]
+    },
     "platforms": {
         "game_distribution": {
             "gameId": ""
@@ -44,9 +48,15 @@
         },
         "youtube": {
             "sendAnalyticsEvents": false
+        },
+        "xiaomi": {
+            "adSenseId": "",
+            "hostId": ""
         }
     },
     "advertisement": {
+        "banner": {
+        },
         "interstitial": {
             "preloadOnStart": true
         },
